# BackupTool

./: .gitignore  .qmlls.ini  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  backup-cli.ps1  build.bat  build.ps1  run.bat  run.ps1  setup.ps1
config/: default_settings.json
qml/: BackupCard.qml  BackupCard_new.qml  Main.qml  ProgressDialog.qml  SettingsPage.qml
src/: backupmanager.cpp  backupmanager.h  configbackup.cpp  configbackup.h  main.cpp  systeminfo.cpp  systeminfo.h
